# sand

./: Cargo.toml  LICENSE  README.md
src/: board.rs  evaluation.rs  find_magics.rs  lib.rs  main.rs  search.rs  uci.rs
src/attacks/: magics.rs  movegen.rs  tables.rs
src/chess/: board.rs  make_move.rs  mod.rs  moves.rs  zobrist.rs
src/chess/attacks/: magics.rs  mod.rs  movegen.rs  tables.rs
src/engine/: evaluation.rs  mod.rs  ordering.rs  search.rs  transposition.rs  uci.rs
src/perft/: perft_logic.rs  perft_test.rs
tests/: perft.rs  recursion.rs  utils.rs
