[package]
name = "sand"
version = "0.1.0"
edition = "2024"
default-run = "sand"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "find_magics"
path = "src/find_magics.rs"

[[bin]]
name = "perft_test"
path = "src/perft/perft_test.rs"

[dependencies]
rand = "0.9.2"
tinyvec = "1.10.0"
